--- a/src/Components/TopWear/Styles/TopWear.module.css
+++ b/src/Components/TopWear/Styles/TopWear.module.css
@@ -7,6 +7,7 @@
 border: 1px solid black;
 width: 20%;
 text-align: center;
+margin-left: 20px;
 }
 .topWearList{
     /* border: 1px solid black; */
