--- a/src/Routes/SingleProductPage.css
+++ b/src/Routes/SingleProductPage.css
@@ -50,3 +50,33 @@
   margin-top: 4px;
   margin-right: 425px;
 }
+
+@media only screen and (max-width: 600px) {
+  .leftside {
+    max-width: 535%;
+  }
+  .leftdiv {
+    margin-left: -64px;
+  }
+  .left2div {
+    margin-left: 35px;
+    margin-right: -60px;
+  }
+  .addbtn {
+    padding: 0px 10px;
+  }
+  .addbtn2 {
+    padding: 10px 10px;
+  }
+  .rightside1 {
+    margin: 0px -45px;
+  }
+  .delivery {
+    margin-right: 177px;
+    margin-top: 10px;
+  }
+  .sizediv {
+    margin-left: -45px;
+    margin-right: -44px;
+  }
+}
